@@ -132,11 +132,7 @@ test_email("badkey_8.txt", "invalid"); # public key unmatched g= tag
 test_email("badkey_9.txt", "invalid"); # public key empty g= tag
 test_email("badkey_10.txt", "invalid"); # public key requires i == d
 test_email("badkey_11.txt", "invalid"); # public key unmatched h= tag
-TODO:
-{
-	local $TODO = "not fixed yet";
-	test_email("badkey_12.txt", "invalid"); # public key g= != i= by case
-};
+test_email("badkey_12.txt", "invalid"); # public key g= != i= by case
 test_email("badkey_13.txt", "invalid"); # public key g= matches From but not i=
 
 
