@@ -6,6 +6,8 @@ Version 0.32
  since 0.31:
   * removed requirement for Digest::SHA1 (issue #1832549).
     We now use the more capable Digest::SHA module for SHA-1 and SHA-256.
+  * bugfix:
+    * granularity checking should be case-sensitive (issue #1938112).
 
 
 Version 0.31 - released 2008-04-14
